<?xml version="1.0"?>
<package format="2">
  <name>fuel_gun_grasp</name>
  <version>0.1.0</version>
  <description>
    OpenManipulator-X-based ROS package for grasping fuel guns in a simulated environment. This package includes nodes for controlling the manipulator, processing sensor data, and executing grasping tasks. It is designed to work with Gazebo and RViz for visualization and testing.
  </description>

  <maintainer email="user@example.com">OpenArm Dev</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>open_manipulator_msgs</depend>

</package>
